--- a/templates/product/products.html
+++ b/templates/product/products.html
@@ -3,7 +3,7 @@
 {% block main_content %}
 <ul>
 {% for instance in object_list %}
-  <li><strong>{{instance.id }}</strong>: <a href='{{ instance.get_absoluteurl }}'> {{ instance.title }}</a> - {{ instance.price }}$ - {{ instance.descr }} </li>
+  <li><strong>{{instance.id }}</strong>: <a href='{{ instance.get_absolute_url }}'> {{ instance.title }}</a> - {{ instance.price }}$ - {{ instance.descr }} </li>
 {% endfor %}
 </ul>
 {% endblock %}
